test/error/include_filename_eof.sv
// pattern: unexpected end of input, looking for '>'
`include <foo
